--- a/GAS APP WHC/SmartGas/SmartGas/SmartGas.Android/SmartGas.Android.csproj
+++ b/GAS APP WHC/SmartGas/SmartGas/SmartGas.Android/SmartGas.Android.csproj
@@ -124,5 +124,15 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ic_popup.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Gas_bg.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\oxy_gas.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
