--- a/GAS APP WHC/Source/SmartGasAPI/appsettings.json
+++ b/GAS APP WHC/Source/SmartGasAPI/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "Tokens": {
+    "Key": "ASPNETCORESECRETKEYFORAUTHENTICATIONANDAUTHORIZATION",
+    "Issuer": "localhost.com",
+    "AccessExpireSeconds": "5400"// 90P
+  }
 }
