--- a/GAS APP WHC/Source/SmartGas/SmartGas/SmartGas.iOS/SmartGas.iOS.csproj
+++ b/GAS APP WHC/Source/SmartGas/SmartGas/SmartGas.iOS/SmartGas.iOS.csproj
@@ -134,6 +134,9 @@
     <PackageReference Include="SkiaSharp.Views.Forms">
       <Version>1.68.0</Version>
     </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.8.116</Version>
+    </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.Buttons">
       <Version>19.4.0.38</Version>
     </PackageReference>
