--- a/GAS APP WHC/Source/SmartGas/SmartGas/SmartGas/SmartGas.csproj
+++ b/GAS APP WHC/Source/SmartGas/SmartGas/SmartGas/SmartGas.csproj
@@ -40,9 +40,11 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="NuGet.Common" Version="6.0.0" />
     <PackageReference Include="SkiaSharp.Extended" Version="1.60.0" />
     <PackageReference Include="SkiaSharp.Svg" Version="1.60.0" />
     <PackageReference Include="SkiaSharp.Views.Forms" Version="1.68.0" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
     <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="19.4.0.38" />
     <PackageReference Include="Syncfusion.Xamarin.Cards" Version="19.4.0.38" />
     <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.38" />
@@ -69,6 +71,18 @@
     </Compile>
     <Compile Update="Views\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\RegistReturnGasPage.xaml.cs">
+      <DependentUpon>RegistReturnGasPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\RegistOutPage.xaml.cs">
+      <DependentUpon>RegistOutPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\RegistOutListPage.xaml.cs">
+      <DependentUpon>RegistOutListPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\RegistOutMainActionPage.xaml.cs">
+      <DependentUpon>RegistOutMainActionPage.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\RegistInMainActionPage.xaml.cs">
       <DependentUpon>RegistInMainActionPage.xaml</DependentUpon>
@@ -160,7 +174,19 @@
     <EmbeddedResource Update="Views\InventoryListPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\RegistReturnGasPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\RegistOutPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\RegistOutListPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\RegistInListPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\RegistOutMainActionPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\RegistInMainActionPage.xaml">
